# mathreverb_source

./: CMakeLists.txt  Doxyfile  README.md
resource/: mathreverb.rc  mathreverb.uidesc
source/: cmathreverbview.h  mathreverb.cpp  mathreverb.h  mathreverbapex.cpp  mathreverbapex.h  mathreverbcids.h  mathreverbcontroller.cpp  mathreverbcontroller.h  mathreverbentry.cpp  mathreverbentry_vst2.cpp  mathreverbgraph.cpp  mathreverbgraph.h  mathreverbparamids.h  mathreverbprocess.h  mathreverbvst3editor.h  version.h
source/mathreverbparams/: coordinate.h  gain.h  globalparams.h  paramids.h  reflection.h  size.h
